--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -73,17 +73,6 @@ input.inline
 label.inline
   margin: $input-margin
 
-.block
-  margin-bottom: 1.5rem
-
-  label
-    margin: $input-margin
-
-  input
-    @extend %inline-input
-    vertical-align: middle
-
-
 .box
   border-style: dashed
   border-radius: 1rem
@@ -98,3 +87,6 @@ button.grey
 
 button:hover
   color: black
+
+select.inline
+  margin-bottom: 1.5rem
